# codecad

./: .gitignore  README.md  RELEASE.md  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
mvp-demo-tests/: 01-panel-edges.txt  02-flat-layout-box-parts.txt  03-nesting-target-holes.txt
public/libs/: svgnest.js
public/nesting/: polygon-packer.wasm
rust/nesting-wasm/: Cargo.toml  README.md
rust/nesting-wasm/src/: lib.rs
scripts/: build-svgnest-wasm.mjs
src/: App.test.tsx  App.tsx  ci-lint-comment-smoke.ts  index.css  setupTests.ts
src/components/: add-parameter-dialog.tsx  code-editor.tsx  coordinate-grid.tsx  edit-parameter-dialog.tsx  editor-error-status.tsx  export-dxf-dialog.tsx  model-hover-card.tsx  models-pane.tsx  mvp-demo-panel.tsx  nesting-genetic-settings.tsx  nesting-manager.tsx  nesting-rotation-control.tsx  nesting-settings-form.tsx  nesting-status.tsx  nesting-target-dialog.tsx  nesting-target-list.tsx  nesting-wasm-settings.tsx  parameter-control.tsx  parameters-pane.tsx  project-library-dialog.tsx  selection-area.tsx  selection-mode-toggle.tsx  theme-provider.tsx  theme-toggle.tsx  toolbar.tsx  visualization-area.tsx  workbench-layout.tsx
src/context/: PanZoomContext.tsx
src/hooks/: usePanZoom.ts  usePanZoomHotkeys.ts
src/lib/: cad.ts  constants.ts  editor-recovery.test.ts  editor-recovery.ts  geometry.ts  model-diagnostics.test.ts  model-diagnostics.ts  nesting-public-api.test.ts  nesting.test.ts  nesting.ts  svg-highlight.test.ts  svg-highlight.ts  svg-render.ts  (+1 more)
(+144 files in other folders)
